--- a/src/pages/gongji/gongji.html
+++ b/src/pages/gongji/gongji.html
@@ -7,14 +7,15 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-buttons style=" 
+    
+    <ion-buttons  style="
     position: absolute;
     left: 0;
     z-index: 9999;
     color: white;" start>
-      <button (click)="openclose();" menuToggle ion-button icon-only color="royal">
+      <button (click)="close();"  ion-button icon-only color="royal">
         <img style="
-        width: 30px" class="logo" src="assets/img/hamburger.png" />
+        width: 30px" class="logo" src="assets/img/back1.png" />
       </button>
     </ion-buttons>
      
