--- a/src/pages/attendance/attendance.html
+++ b/src/pages/attendance/attendance.html
@@ -77,7 +77,7 @@
       <div class="room-current">
         <div class="title-div">
           <ion-icon class="square" name="square"></ion-icon>
-          <span style="color:black;" class="text">출근 현황</span>
+          <span style="color:black;" class="text">오늘의 출근 현황</span>
         </div>
 
         <div class="chart-div">
@@ -102,7 +102,7 @@
 
         <div class="title-div">
           <ion-icon class="square" name="square"></ion-icon>
-          <span style="color:black;" class="text">퇴근 현황</span>
+          <span style="color:black;" class="text">오늘의 퇴근 현황</span>
         </div>
 
         <div class="chart-div">
