--- a/src/pages/choicemodal3/choicemodal3.html
+++ b/src/pages/choicemodal3/choicemodal3.html
@@ -17,7 +17,7 @@ top: 30%;" padding>
             float: left;
     line-height: 50px;
     font-size: 24px;
-            background: brown;" class="input-title">아가씨</div>
+            background: brown;" class="input-title">출근처리</div>
             
 
             <button style="
