--- a/src/pages/choicemodal2/choicemodal2.html
+++ b/src/pages/choicemodal2/choicemodal2.html
@@ -17,7 +17,7 @@ top: 30%;" padding>
             float: left;
     line-height: 50px;
     font-size: 24px;
-            background: brown;" class="input-title">아가씨</div>
+            background: brown;" class="input-title">아가씨 신규</div>
             
 
             <button style="
@@ -36,41 +36,23 @@ border: solid 1px;
 background: red;" ion-button (click)="confirm()">저장</button>
 
           </div>
-
-          <div  class="center">
-            <ion-input #input type="text" class="sc" [(ngModel)]='text'  (ionChange)='onChangeTime($event,1)'>
-            </ion-input>
-  
-            <ion-input #input2 type="text" class="sc" [(ngModel)]='text2'  (ionChange)='onChangeTime($event,2)'>
-            </ion-input>
-  
-            <ion-input #input3 type="text" class="sc" [(ngModel)]='text3'  (ionChange)='onChangeTime($event,3)'>
-            </ion-input>
+          <div *ngFor="let aa of agasilist; let i = index" class="center">
+            <span style="    color: black;
+            width: 50%;
+            line-height: 80px;
+            font-size: 20px;
+            text-align: center;">{{aa.name}} 조판팀 </span>
+            <ion-list style="    margin-top: 20px;">
+              <ion-item>
+                <ion-label>조판팀 </ion-label>
+                <ion-select [(ngModel)]="this['qtd' + i]">
+                  <ion-option *ngFor="let a of jopanlist" style="color:black;" value="{{a.name}}">{{a.name}}</ion-option>
+                </ion-select>
+              </ion-item>
+            </ion-list>
           </div>
          
 
-          <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text4'  (ionChange)='onChangeTime($event,4)'>
-            </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text5'  (ionChange)='onChangeTime($event,5)'>
-            </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text6'  (ionChange)='onChangeTime($event,6)'>
-            </ion-input>
-          </div>
-
-
-          <div  class="center">
-            <ion-input #input7 type="text" class="sc" [(ngModel)]='text7'  (ionChange)='onChangeTime($event,7)'>
-            </ion-input>
-  
-            <ion-input #input8 type="text" class="sc" [(ngModel)]='text8'  (ionChange)='onChangeTime($event,8)'>
-            </ion-input>
-  
-            <ion-input #input9 type="text" class="sc" [(ngModel)]='text9'  (ionChange)='onChangeTime($event,9)'>
-            </ion-input>
-          </div>
 
 
           <!-- <div  class="center">
