--- a/src/pages/info/info.html
+++ b/src/pages/info/info.html
@@ -62,6 +62,13 @@
     </div>
 
     <div class="chart-div">
+      <button (click)="buchange()"  style="
+            width: 80px;
+            background: orange;
+            border: solid 1px;
+            color: black;
+            margin-left:20px;
+            height: 30px; ">{{bu}}부</button>
       <div class="name-keys">
         <span>룸NO</span>
         <span>담당자</span>
