--- a/src/pages/loginpage/loginpage.html
+++ b/src/pages/loginpage/loginpage.html
@@ -11,12 +11,15 @@
   </ion-header>
   
   <ion-content style="
-  background: black; margin-top:45px;" padding>
+  background: #fdd734; margin-top:45px;" padding>
   
     <img class="logo" src="assets/img/logo_wad.jpg" />
   
     <div class="pass">
-      <input  style="margin-bottom:5% !important;" class="input-box" placeholder="아이디를 입력해주세요. " [(ngModel)]="id" type="text"/>
+      <input  style="margin-bottom:5% !important;     margin-bottom: 1%;
+      border: solid 1px;
+      border-radius: 5px;
+      padding: 10px;" class="input-box" placeholder="아이디를 입력해주세요. " [(ngModel)]="id" type="text"/>
     </div>
     <div class="pass">
       
@@ -28,8 +31,11 @@
       margin-left:30px;
       height: 50px;" class="check-box" [(ngModel)]="check" ></ion-checkbox> -->
       <div style="    padding: 20px;" class="middle">
-        <input id="checked" (click)="checkbox_click()" type="checkbox" name="xxx" value="yyy" >
-        <ion-label style="color:white; font-size:13px;" class="check-name" (click)="checkbox_click()">로그인 상태 유지</ion-label>
+        <input style="    margin-bottom: 1%;
+        border: solid 1px;
+        border-radius: 5px;
+        padding: 10px;" id="checked" (click)="checkbox_click()" type="checkbox" name="xxx" value="yyy" >
+        <ion-label style="color:white; font-size:15px;" class="check-name" (click)="checkbox_click()">로그인 상태 유지</ion-label>
       <!-- </div> -->
         <!-- <button style="font-size:13px; 
         width: 130px !important;" class="fnid-id" (click)="find_admin()">아이디/비밀번호 찾기</button> -->
@@ -39,24 +45,28 @@
   font-size: 50px;
   width: 100%;" class="b">
     <button ion-button calss="login-button" (click)="login()"
-      style="width: 90%; 
+      style="
+      width: 40%;
       border-radius: 10px;
-      background-color: grey;
+      background-color: white;
       font-size: 25px;
-      color:white;
+      color: black;
       border-radius: 10px;
-      margin: auto;">
+      margin: auto;
+      height: 60px;">
         <span style="font-size:30px;"> 로그인</span>
     </button>
   
     <button ion-button class="login-button"  (click)="signup()"
-    style="width: 90%; 
+    style="
+    width: 40%;
     border-radius: 10px;
-    background-color: grey;
+    background-color: white;
     font-size: 25px;
-    color:white;
+    color: black;
     border-radius: 10px;
-    margin: auto;">
+    margin: auto;
+    height: 60px;">
        <span style="font-size:30px;"> 회원가입 </span>
     </button>
   </div>
