--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -19,9 +19,9 @@
   <!-- button ion button New order with border solid 1px black -->
   <div class="btndiv">
 
-    <button ion-button (click)="neworder();" class="newbtn">신규 주문</button>
+    <!-- <button ion-button (click)="neworder();" class="newbtn">신규 주문</button> -->
  
-    <button ion-button (click)="moreorder();" class="newbtn">추가 주문</button>
+    <button ion-button (click)="moreorder();" class="newbtn">주문</button>
    
     <button ion-button (click)="cancelorder();"  class="newbtn">주문 취소 </button>
   </div>
