--- a/src/pages/wt/wt.html
+++ b/src/pages/wt/wt.html
@@ -65,18 +65,20 @@
 <ion-nav #mycontent [root]="rootPage"></ion-nav>
 
 <ion-content style="
-background: black; margin-top:45px;" padding>
+background: white; margin-top:45px;" padding>
 <div class="header">
 <div class="header-parking">
   <button style="
   float: left;
+  color:black;
   margin-left: 20px;
   margin-top: 10px;" class="header_btn">입금하실금액 </button>
 
   <button style="
   float: right;
+  color:black;
   margin-right: 20px;
-  margin-top: 10px;" class="header_btn">xxx </button>
+  margin-top: 10px;" class="header_btn">{{todaymoney.toLocaleString()}} </button>
 </div>
 </div>
 
@@ -85,17 +87,21 @@ background: black; margin-top:45px;" padding>
 
 <div style="    padding: 20px;" class="c">
   <div class="orderlisting" style="
-  text-align: center; color:white;" *ngIf="orderlist.length==0">
+  text-align: center; color:black;" *ngIf="orderlist.length==0">
     <p > 본 영업일에 주문처리된 내역이 없습니다. </p>
  
     </div>
-<div class="orderlisting" style="color:white;" *ngFor="let i of orderlist; let j = index;">
+<div class="orderlisting" style="color:black;" *ngFor="let i of orderlist; let j = index;">
   <p style="
   margin: 0;"> 룸 번호 : {{i.roomno}}T</p>
   <p style="
   margin: 0;"> 주문일 : {{i.date}}</p>
   <p style="
   margin: 0;"> Wt : {{i.wt}}</p>
+  <p style="
+  margin: 0;"> 방 인원 : {{i.numofpeople}}, 총 술병 : {{i.tbottle}}</p>
+  <p style="
+  margin: 0;"> 완티 : {{i.tcarray}} 차삼: {{i.chasamarray}}</p>
   <span *ngFor="let j of i.value">
     
     <p style="
@@ -106,17 +112,22 @@ background: black; margin-top:45px;" padding>
   
   <p style="
   margin: 0;">TC : {{i.tc}}개 , {{i.money.toLocaleString()}}원</p>
-  <p>합계 : {{(i.tp+i.money).toLocaleString()}}</p>
+  <p style="
+  margin: 0;">연티 : {{i.yeonti}}</p>
+
+<p style="
+margin: 0;"> 연티원인 : {{i.reason}}</p>
+  <p>합계 :  {{(i.tp+i.money+(i.yeonti*10000) ).toLocaleString()}}</p>
   <!-- <p></p>
   <p>주문일자 : {{i.date}}</p> -->
   <hr>
 </div>
 </div>
-<hr style="width: 90%; height: 1px; background-color: white;">
+<hr style="width: 90%; height: 1px; background-color: black;">
 
 <div style="    padding: 20px;" class="c">
   <div class="orderlisting" style="
-  text-align: center; color:white;" *ngIf="mainlist.length==0">
+  text-align: center; color:black;" *ngIf="mainlist.length==0">
     <p > 본 영업일에 주차처리된 내역이 없습니다. </p>
  
     </div>
@@ -134,13 +145,13 @@ background: black; margin-top:45px;" padding>
     <img src="assets/img/bottomarrow.png" style="height: 20px; width: 20px;">
   </div>
 </button>
-<div style="color:white;" class="panel-1" id="panel-1-{{j}}">
+<div style="color:black;" class="panel-1" id="panel-1-{{j}}">
   <div>
     <p *ngIf="i.type=='발렛'">{{i.carnum}}</p>
     <p *ngIf="i.type=='대리'||i.type=='픽업'">{{i.destination}}</p>
   </div>
 </div>
-<hr style="width: 90%; height: 1px; background-color: white;">
+<hr style="width: 90%; height: 1px; background-color: black;">
 </div>
 <!--
 
