--- a/src/pages/choicemodal/choicemodal.html
+++ b/src/pages/choicemodal/choicemodal.html
@@ -4,128 +4,170 @@
 
 <ion-content class="main-view" style="background: transparent;
 background-color: transparent;
-height: 40%;
-top: 30%;" padding>
+height: 80%;
+    top: 10%;" padding>
 
   <div class="modal_content">
 
         <div class="img">
           <div style="width: 100%; height:70px;">
             <div style="
-            width: 30%;
-            margin: 0px !important;
-            float: left;
+                width: 100px;
+    margin: 0px !important;
+    float: left;
     line-height: 50px;
-    font-size: 24px;
-            background: brown;" class="input-title">아가씨</div>
+    font-size: 15px;
+    background: transparent;" class="input-title">아가씨</div>
             
 
             <button style="
             color: white;
             font-size: 20px;
             float: right;
-            width: 80px;
+            width: 50px;
             border: solid 1px;
             background: red;" ion-button (click)="cancel()">취소</button>
 <button style="
 color: white;
 font-size: 20px;
 float: right;
-width: 80px;
+width: 50px;
 border: solid 1px;
 background: red;" ion-button (click)="confirm()">저장</button>
 
           </div>
 
           <div  class="center">
-            <ion-input #input type="text" class="sc" [(ngModel)]='text'  (ionChange)='onChangeTime($event,1)'>
+            <ion-input #input type="text" [ngClass]="condition ? 'sc2' : 'sc'"  [(ngModel)]='text'  (ionChange)='onChangeTime($event,1)'>
             </ion-input>
-  
-            <ion-input #input2 type="text" class="sc" [(ngModel)]='text2'  (ionChange)='onChangeTime($event,2)'>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox"  checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input2 type="text" [ngClass]="condition1 ? 'sc2' : 'sc'" [(ngModel)]='text2'  (ionChange)='onChangeTime($event,2)'>
             </ion-input>
-  
-            <ion-input #input3 type="text" class="sc" [(ngModel)]='text3'  (ionChange)='onChangeTime($event,3)'>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox2" checked="false"  (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input3 type="text"[ngClass]="condition2 ? 'sc2' : 'sc'" [(ngModel)]='text3'  (ionChange)='onChangeTime($event,3)'>
             </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox3" checked="false"  (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
           </div>
          
 
           <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text4'  (ionChange)='onChangeTime($event,4)'>
+            <ion-input #input4 type="text" [ngClass]="condition3 ? 'sc2' : 'sc'" [(ngModel)]='text4'  (ionChange)='onChangeTime($event,4)'>
             </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text5'  (ionChange)='onChangeTime($event,5)'>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox4" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input5 type="text"[ngClass]="condition4 ? 'sc2' : 'sc'" [(ngModel)]='text5'  (ionChange)='onChangeTime($event,5)'>
             </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text6'  (ionChange)='onChangeTime($event,6)'>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox5" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input6 type="text" [ngClass]="condition5 ? 'sc2' : 'sc'" [(ngModel)]='text6'  (ionChange)='onChangeTime($event,6)'>
             </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox6" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
           </div>
 
 
           <div  class="center">
-            <ion-input #input7 type="text" class="sc" [(ngModel)]='text7'  (ionChange)='onChangeTime($event,7)'>
+            <ion-input #input7 type="text" [ngClass]="condition7 ? 'sc2' : 'sc'" [(ngModel)]='text7'  (ionChange)='onChangeTime($event,7)'>
             </ion-input>
-  
-            <ion-input #input8 type="text" class="sc" [(ngModel)]='text8'  (ionChange)='onChangeTime($event,8)'>
-            </ion-input>
-  
-            <ion-input #input9 type="text" class="sc" [(ngModel)]='text9'  (ionChange)='onChangeTime($event,9)'>
-            </ion-input>
-          </div>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox7" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
 
+            <ion-input #input8 type="text" [ngClass]="condition8 ? 'sc2' : 'sc'" [(ngModel)]='text8'  (ionChange)='onChangeTime($event,8)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox8" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
 
-          <!-- <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text10'  (ionChange)='onChangeTime($event,10)'>
+            <ion-input #input9 type="text" [ngClass]="condition9 ? 'sc2' : 'sc'" [(ngModel)]='text9'  (ionChange)='onChangeTime($event,9)'>
             </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text11'  (ionChange)='onChangeTime($event,11)'>
-            </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text12'  (ionChange)='onChangeTime($event,12)'>
-            </ion-input>
-          </div>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox9" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
 
-          <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text13'  (ionChange)='onChangeTime($event,13)'>
-            </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text14'  (ionChange)='onChangeTime($event,14)'>
-            </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text15'  (ionChange)='onChangeTime($event,15)'>
-            </ion-input>
-          </div>
-
-          <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text16'  (ionChange)='onChangeTime($event,16)'>
-            </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text17'  (ionChange)='onChangeTime($event,17)'>
-            </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text18'  (ionChange)='onChangeTime($event,18)'>
-            </ion-input>
-          </div> -->
-
-
-          <!-- <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text19'  (ionChange)='onChangeTime($event,16)'>
-            </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text17'  (ionChange)='onChangeTime($event,17)'>
-            </ion-input>
-  
-            <ion-input #input6 type="text" class="sc" [(ngModel)]='text18'  (ionChange)='onChangeTime($event,18)'>
-            </ion-input>
           </div>
 
 
           <div  class="center">
-            <ion-input #input4 type="text" class="sc" [(ngModel)]='text19'  (ionChange)='onChangeTime($event,19)'>
+            <ion-input #input4 type="text" [ngClass]="condition10 ? 'sc2' : 'sc'" [(ngModel)]='text10'  (ionChange)='onChangeTime($event,10)'>
             </ion-input>
-  
-            <ion-input #input5 type="text" class="sc" [(ngModel)]='text20'  (ionChange)='onChangeTime($event,20)'>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox10" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input5 type="text" [ngClass]="condition11 ? 'sc2' : 'sc'" [(ngModel)]='text11'  (ionChange)='onChangeTime($event,11)'>
             </ion-input>
-          </div> -->
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox11" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input6 type="text" [ngClass]="condition12 ? 'sc2' : 'sc'" [(ngModel)]='text12'  (ionChange)='onChangeTime($event,12)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox12" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+          </div>
+
+          <div  class="center">
+            <ion-input #input4 type="text" [ngClass]="condition12 ? 'sc2' : 'sc'" [(ngModel)]='text13'  (ionChange)='onChangeTime($event,13)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox13" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input5 type="text" [ngClass]="condition13 ? 'sc2' : 'sc'" [(ngModel)]='text14'  (ionChange)='onChangeTime($event,14)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox14" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input6 type="text" [ngClass]="condition14 ? 'sc2' : 'sc'" [(ngModel)]='text15'  (ionChange)='onChangeTime($event,15)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox15" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+          </div>
+
+          <div  class="center">
+            <ion-input #input4 type="text" [ngClass]="condition15 ? 'sc2' : 'sc'" [(ngModel)]='text16'  (ionChange)='onChangeTime($event,16)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox16" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input5 type="text" [ngClass]="condition16 ? 'sc2' : 'sc'" [(ngModel)]='text17'  (ionChange)='onChangeTime($event,17)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox17" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input6 type="text" [ngClass]="condition17 ? 'sc2' : 'sc'" [(ngModel)]='text18'  (ionChange)='onChangeTime($event,18)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox18" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+          </div>
+
+
+          <div  class="center">
+            <ion-input #input4 type="text" [ngClass]="condition18 ? 'sc2' : 'sc'" [(ngModel)]='text19'  (ionChange)='onChangeTime($event,16)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox19" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input5 type="text" [ngClass]="condition19 ? 'sc2' : 'sc'" [(ngModel)]='text20'  (ionChange)='onChangeTime($event,17)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox20" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+            <ion-input #input6 type="text" [ngClass]="condition20 ? 'sc2' : 'sc'" [(ngModel)]='text21'  (ionChange)='onChangeTime($event,18)'>
+            </ion-input>
+            <ion-checkbox style="
+            margin-top: 25px;" color="dark" [(ngModel)]="checkbox21" checked="false" (ionChange)='onChangeTime2($event,1)'></ion-checkbox>
+
+          </div>
+
+
           <!-- <button class="btn" (click)="takeVideo()" ion-button>동영상</button> -->
       </div>
 
