--- a/src/pages/ordermain/ordermain.html
+++ b/src/pages/ordermain/ordermain.html
@@ -59,6 +59,37 @@
 
   <ion-nav #mycontent [root]="rootPage"></ion-nav>
 <ion-content class="contents" padding>
+  <div class="selecting">
+    <ion-select style="    float: left;
+    color: black;
+    height: 50px;
+    border: solid 1px;
+    width: 80px;
+    margin-left: 100px;
+    line-height: 25px;
+" [(ngModel)]="selected" (ionChange)="selecting(selected)">
+      <ion-option  value="1">담당자</ion-option>
+      <ion-option  value="2">WT</ion-option>
+    </ion-select>
+    <ion-input  style="
+    color: black;
+    height: 50px;
+    border: solid 1px;
+    margin-left: 10px;
+    line-height: 25px;
+    width: 30%;
+    float: left;" [(ngModel)]="inputtext"  placeholder="검색어 입력"></ion-input>
+    <button style=" 
+    margin-left: 10px;
+    margin-top: 0px;
+    height: 50px;
+    background: transparent;
+    border: solid 1px;
+    color: black !important;
+    width: 50px;" (click)="searching();" ion-button icon-only color="royal">
+      검색
+    </button>
+  </div>
   <div class="room-current">
     <div class="title-div">
       <ion-icon class="square" name="square"></ion-icon>
@@ -73,6 +104,10 @@
         <span>WT</span>
         <span>주문</span>
       </div>
+      <div style="height:50px;"  *ngIf="mainlist.length==0" class="datas">
+        <p >   방 내역이 없습니다. </p>
+     
+        </div>
       <div (click)="editing(a);" *ngFor="let a of mainlist" class="datas">
         <span>{{a.name}}</span>
         <span>{{a.incharge}}</span>
@@ -83,4 +118,32 @@
     </div>
   </div>
 
+
+  <div class="room-current">
+    <div class="title-div">
+      <ion-icon class="square" name="square"></ion-icon>
+      <span class="text">미주문 룸 현황</span>
+    </div>
+
+    <div class="chart-div">
+      <div class="name-keys">
+        <span>룸NO</span>
+        <span>담당자</span>
+        <span>인원</span>
+        <span>WT</span>
+        <span>주문</span>
+      </div>
+      <div   *ngIf="mainlist_no_order.length==0" class="datas">
+        <p >   방 내역이 없습니다. </p>
+     
+        </div>
+      <div (click)="editing(a);" *ngFor="let a of mainlist_no_order" class="datas">
+        <span>{{a.name}}</span>
+        <span>{{a.incharge}}</span>
+        <span>{{a.numofpeople}} 인 </span>
+        <span>{{a.wt}}</span>
+        <span>미주문</span>
+      </div>
+    </div>
+  </div>
 </ion-content>
